--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 button {
-    background-color: white;
+    background-color: blue;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-top: auto;
