--- a/style.css
+++ b/style.css
@@ -39,8 +39,12 @@ nav ul li a:hover {
   background-color: #34495e;
   color: #ffcc00;
 }
+.logo img {
+  height: 40px;
 body {
   margin: 0;
   padding-top: 70px; 
   font-family: Arial, sans-serif;
 }
+
+
