--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@media (max-width: 768px) {
+  .nav-container {
+    flex-direction: column;
+    align-items: center;
 button {
     background-color: blue;
     font-family: 'Times New Roman', Times, serif;
